; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_check_loglevel.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_check_loglevel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSGL_MAX = common dso_local global i32 0, align 4
@mp_log_levels = common dso_local global i64* null, align 8
@.str = private unnamed_addr constant [23 x i8] c"Invalid log level '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @check_loglevel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_loglevel(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i8* @luaL_checkstring(i32* %7, i32 %8)
  store i8* %9, i8** %5, align 8
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %33, %2
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @MSGL_MAX, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %36

14:                                               ; preds = %10
  %15 = load i64*, i64** @mp_log_levels, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i64, i64* %15, i64 %17
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %32

21:                                               ; preds = %14
  %22 = load i64*, i64** @mp_log_levels, align 8
  %23 = load i32, i32* %6, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i64, i64* %22, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = call i64 @strcasecmp(i64 %26, i8* %27)
  %29 = icmp eq i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %21
  %31 = load i32, i32* %6, align 4
  ret i32 %31

32:                                               ; preds = %21, %14
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %6, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %6, align 4
  br label %10

36:                                               ; preds = %10
  %37 = load i32*, i32** %3, align 8
  %38 = load i8*, i8** %5, align 8
  %39 = call i32 @luaL_error(i32* %37, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %38)
  %40 = call i32 (...) @abort() #3
  unreachable
}

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i64 @strcasecmp(i64, i8*) #1

declare dso_local i32 @luaL_error(i32*, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
